[gd_scene load_steps=10 format=2]

[ext_resource path="res://Prefabs/UI/Scripts/LevelChoice.gd" type="Script" id=1]
[ext_resource path="res://Assets/Intro/Big_window.png" type="Texture" id=2]
[ext_resource path="res://Assets/EndScreens/Buttom_Next_normal.png" type="Texture" id=3]
[ext_resource path="res://Assets/EndScreens/Buttom_Next_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/EndScreens/Buttom_Next_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/DialoguedFont.tres" type="Theme" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move_in"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -236 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.290196, 0.054902, 0.054902, 0 )

[node name="LevelChoice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 10240.0
margin_bottom = 5760.0
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move_in"
anims/RESET = SubResource( 1 )
anims/move_in = SubResource( 2 )

[node name="BigWindow" type="Sprite" parent="."]
position = Vector2( 261, 155 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="BackButton" type="TextureButton" parent="BigWindow"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -353.25
margin_top = -488.25
margin_right = -223.25
margin_bottom = -401.25
rect_pivot_offset = Vector2( 1, 1 )
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_next = NodePath(".")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
flip_h = true

[node name="AvailableLevels" type="VBoxContainer" parent="."]
margin_left = 157.0
margin_top = 92.0
margin_right = 366.0
margin_bottom = 198.0
theme = ExtResource( 6 )
custom_constants/separation = -4

[node name="Intro" type="Button" parent="AvailableLevels"]
unique_name_in_owner = true
margin_right = 209.0
margin_bottom = 25.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_previous = NodePath(".")
theme = ExtResource( 6 )
custom_constants/hseparation = -4
custom_styles/normal = SubResource( 3 )
text = "Intro"
icon_align = 1

[node name="Level1" type="Button" parent="AvailableLevels"]
unique_name_in_owner = true
margin_top = 21.0
margin_right = 209.0
margin_bottom = 46.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
theme = ExtResource( 6 )
custom_constants/hseparation = -4
custom_styles/normal = SubResource( 3 )
text = "Level 1"
icon_align = 1

[node name="Level2" type="Button" parent="AvailableLevels"]
unique_name_in_owner = true
margin_top = 42.0
margin_right = 209.0
margin_bottom = 67.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
theme = ExtResource( 6 )
custom_constants/hseparation = -4
custom_styles/normal = SubResource( 3 )
text = "Level 2"
icon_align = 1

[node name="Level3" type="Button" parent="AvailableLevels"]
unique_name_in_owner = true
margin_top = 63.0
margin_right = 209.0
margin_bottom = 88.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
theme = ExtResource( 6 )
custom_constants/hseparation = -4
custom_styles/normal = SubResource( 3 )
text = "Level 3"
icon_align = 1

[node name="Boss" type="Button" parent="AvailableLevels"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 209.0
margin_bottom = 109.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
theme = ExtResource( 6 )
custom_constants/hseparation = -4
custom_styles/normal = SubResource( 3 )
text = "Boss"
icon_align = 1

[connection signal="focus_entered" from="BigWindow/BackButton" to="." method="_on_BackButton_focus_entered"]
[connection signal="pressed" from="BigWindow/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="focus_entered" from="AvailableLevels/Intro" to="." method="_on_Intro_focus_entered"]
[connection signal="pressed" from="AvailableLevels/Intro" to="." method="_on_Intro_pressed"]
[connection signal="focus_entered" from="AvailableLevels/Level1" to="." method="_on_Level1_focus_entered"]
[connection signal="pressed" from="AvailableLevels/Level1" to="." method="_on_Level1_pressed"]
[connection signal="focus_entered" from="AvailableLevels/Level2" to="." method="_on_Level2_focus_entered"]
[connection signal="pressed" from="AvailableLevels/Level2" to="." method="_on_Level2_pressed"]
[connection signal="focus_entered" from="AvailableLevels/Level3" to="." method="_on_Level3_focus_entered"]
[connection signal="pressed" from="AvailableLevels/Level3" to="." method="_on_Level3_pressed"]
[connection signal="focus_entered" from="AvailableLevels/Boss" to="." method="_on_Boss_focus_entered"]
[connection signal="pressed" from="AvailableLevels/Boss" to="." method="_on_Boss_pressed"]
